refactor: 项目后端文件重构，细化目录分层、规整代码风格